manifests/mtls_dis.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: istio-demo
spec:
  mtls:
    mode: PERMISSIVE
