manifests/deployment-ha-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha-front
  namespace: istio-demo
  labels:
    app: ha-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ha-front
  template:
    metadata:
      namespace: istio-demo
      labels:
        app: ha-front
    spec:
      containers:
        - name: ha-front
          image: "stellariz/ha-front:v1"
          imagePullPolicy: Always
          ports:
            - name: http-intern
              containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ha-front-service
  namespace: istio-demo
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http-intern
      protocol: TCP
  selector:
    app: ha-front
