manifests/deployment-ha-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha-web-app
  namespace: istio-demo
  labels:
    app: ha-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ha-web-app
  template:
    metadata:
      namespace: istio-demo
      labels:
        app: ha-web-app
    spec:
      serviceAccountName: web-app-sa
      containers:
        - name: ha-web-app
          image: "stellariz/ha-webapp:v1"
          imagePullPolicy: Always
          ports:
            - name: http-intern
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ha-web-app-service
  namespace: istio-demo
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http-intern
      protocol: TCP
  selector:
    app: ha-web-app
