manifests/keycloak-deployment.yml
apiVersion: v1
kind: Service
metadata:
  namespace: istio-demo
  name: keycloak-service
spec:
  ports:
    - name: http
      port: 8079
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: istio-demo
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:20.0.3
          imagePullPolicy: IfNotPresent
          args: [ "start-dev" ]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
