manifests/auth-policy-ha-details.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: auth-policy-ha-details
  namespace: istio-demo
spec:
  selector:
    matchLabels:
      app: ha-details
  jwtRules:
    - issuer: "http://localhost/realms/istio-demo-app"
      jwksUri: "http://keycloak-service.istio-demo.svc.cluster.local:8079/realms/istio-demo-app/protocol/openid-connect/certs"
      outputPayloadToHeader: x-token
      fromHeaders:
        - name: Authorization
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-policy
  namespace: istio-demo
spec:
  selector:
    matchLabels:
      app: ha-details
  action: ALLOW
  rules:
  - from:
    to:
    - operation:
        methods: ["GET"]
        paths: ["/api/details*"]
    when:
    - key: request.auth.claims[roles]
      values: ["moderator"]
