manifests/auth-policy-ha-web-app.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: auth-policy-ha-web-app
spec:
  selector:
    matchLabels:
      app: ha-web-app
  jwtRules:
    - issuer: "https://dev-u5o37olgehpj6ms5.us.auth0.com/"
      jwksUri: "https://dev-u5o37olgehpj6ms5.us.auth0.com/.well-known/jwks.json"
      outputPayloadToHeader: x-token
      fromHeaders:
        - name: Authorization
          prefix: "Bearer "
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-require-ha-web-app
spec:
  selector:
    matchLabels:
      app: ha-web-app
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
