manifests/user-auth-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-policy
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: ha-web-app
  rules:
    - when:
        - key: request.auth.claims[permissions]
          values: ["read:greeting-message"]
